[package]
name = "korea-investment-api"
authors = ["xanthorrhizol<xanthorrhizol@proton.me>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
chrono-tz = "0.8.2"
json = "0.12.4"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["macros"] }
websocket = "0.26.5"
