[package]
name = "korea-investment-api"
authors = ["Xanthorrhizol <xanthorrhizol@proton.me>"]
version = "1.3.0"
edition = "2021"
description = "Korea Investment API client for Rust(Not official)"
repository = "https://github.com/Xanthorrhizol/korea-investment-api"
readme = "README.md"
license = "MIT"
keywords = ["api", "client", "korea-investment", "stock", "trading"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
example = ["toml", "structopt"]

[dependencies]
aes = "0.8.3"
base64 = "0.21.2"
cbc = "0.1.2"
chrono = "0.4.26"
chrono-tz = "0.8.2"
getset = "0.1.2"
json = "0.12.4"
log = "0.4.19"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_with = "3.3.0"
structopt = { version = "0.3.26", optional = true }
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
toml = { version = "0.8.8", optional = true }
url = "2.4.1"
websocket = "0.26.5"
